Added basic Angular structure.

--- a/public/sass/_variables.scss
+++ b/public/sass/_variables.scss
@@ -21,8 +21,8 @@ $backgroundColorContainer: #eeeeee;
 // Path relevant from www/css folder.
 //$fontPath: "../fonts";
 
-$defaultFont: "Helvetica World", "Helvetica", "Garamond", "Segoe UI", sans-serif;
-$defaultHeaderFont: "Helvetica World", "Helvetica", "Garamond", "Segoe UI", sans-serif;;
+$defaultFont: "Helvetica Neue", "Helvetica", "Garamond", "Segoe UI", sans-serif;
+$defaultHeaderFont: "Helvetica Neue", "Helvetica", "Garamond", "Segoe UI", sans-serif;;
 
 // --------------------------------------------------
 // Media queries breakpoints
