Set basic CSS colors.

--- a/public/sass/_default.scss
+++ b/public/sass/_default.scss
@@ -1,8 +1,9 @@
-
 body {
-    @include backgroundDiagonalGradient($backgroundPrimaryColor, $backgroundSecondaryColor);
+/*    @include backgroundDiagonalGradient($backgroundPrimaryColor, $backgroundSecondaryColor); */
     margin: 0;
     padding: 0;
+    font-family: $defaultFont;
+    height: 100%;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -17,8 +18,10 @@ a {
 }
 
 div#container {
+/*    @include background($color:$backgroundColorContainer); */
     margin: 0 auto;
+    height: 100%;
     div {
-        @include background($color:$backgroundColorContainer);
-    }
+
+    } 
 }
