Modified DB connection string and added basic read from DB.

--- a/public/sass/_variables.scss
+++ b/public/sass/_variables.scss
@@ -9,7 +9,7 @@ $appVersion: "1.0.0";
 
 $defaultTextColor: #000000;
 $defaultLinkColor: $defaultTextColor;
-$defaultLinkHoverColor: #30F0F0;
+$defaultLinkHoverColor: #30F010;
 
 $backgroundPrimaryColor: #000000;
 $backgroundSecondaryColor: #26004A;
