--- a/public/sass/_variables.scss
+++ b/public/sass/_variables.scss
@@ -22,7 +22,7 @@ $backgroundColorContainer: #eeeeee;
 //$fontPath: "../fonts";
 
 $defaultFont: "Helvetica Neue", "Helvetica", "Garamond", "Segoe UI", sans-serif;
-$defaultHeaderFont: "Helvetica Neue", "Helvetica", "Garamond", "Segoe UI", sans-serif;;
+$defaultHeaderFont: "futura-pt", "Helvetica Neue", "Helvetica", "Garamond", "Segoe UI", sans-serif;;
 
 // --------------------------------------------------
 // Media queries breakpoints
