Preparing data for database insertion.

--- a/public/sass/_variables.scss
+++ b/public/sass/_variables.scss
@@ -7,11 +7,11 @@ $appVersion: "1.0.0";
 /*************************** COLORS *******************************/
 /******************************************************************/
 
-$defaultTextColor: #000000;
+$defaultTextColor: #202020;
 $defaultLinkColor: $defaultTextColor;
 $defaultLinkHoverColor: #30F010;
 
-$backgroundPrimaryColor: #000000;
+$backgroundPrimaryColor: #e0e0e0;
 $backgroundSecondaryColor: #26004A;
 $backgroundColorContainer: #eeeeee;
 
