--- a/public/sass/_default.scss
+++ b/public/sass/_default.scss
@@ -1,5 +1,6 @@
 body {
 /*    @include backgroundDiagonalGradient($backgroundPrimaryColor, $backgroundSecondaryColor); */
+	background-color: $backgroundPrimaryColor;
     margin: 0;
     padding: 0;
     font-family: $defaultFont;
@@ -31,4 +32,5 @@ div#container {
 	font-size: 105px;
 	letter-spacing: 12px;
 	text-align: center;
+	color: $defaultTextColor;
 }
