--- a/public/sass/_variables.scss
+++ b/public/sass/_variables.scss
@@ -21,7 +21,8 @@ $backgroundColorContainer: #eeeeee;
 // Path relevant from www/css folder.
 //$fontPath: "../fonts";
 
-$defaultFont: "Helvetica Neue", "Helvetica", "Garamond", "Segoe UI", sans-serif;
+$defaultFont: "futura-pt", "Helvetica Neue", "Helvetica", "Garamond", "Segoe UI", sans-serif;
+
 $defaultHeaderFont: "futura-pt", "Helvetica Neue", "Helvetica", "Garamond", "Segoe UI", sans-serif;;
 
 // --------------------------------------------------
