--- a/public/sass/_default.scss
+++ b/public/sass/_default.scss
@@ -45,3 +45,19 @@ div#container {
     }
 }
 
+span.skill {
+	background-color: #f0f0f0;
+	margin: 2px;
+	margin-right:4px;
+	padding: 8px;
+	padding-top: 2px;
+	padding-bottom: 2px;
+	&:hover {
+        background-color: white;
+        color: black;
+    }
+}
+
+div.user {
+	height: 34px;
+}
