--- a/public/sass/_default.scss
+++ b/public/sass/_default.scss
@@ -29,7 +29,8 @@ div#container {
 /*    	border-bottom: 8px solid $defaultTextColor; */
     }
 	.title {
-		font-size: 105px;
+/*		font-size: 105px; */
+		font-size: 56px;
 		margin-top: 0px;
 		padding-top: 30px;
 		letter-spacing: 12px;
