--- a/public/sass/_variables.scss
+++ b/public/sass/_variables.scss
@@ -29,4 +29,22 @@ $defaultHeaderFont: "futura-pt", "Helvetica Neue", "Helvetica", "Garamond", "Seg
 // Media queries breakpoints
 // --------------------------------------------------
 
+// Extra small screen / phone
+$screen-xs: 480px;
+$screen-phone: $screen-xs;
 
+// Small screen / tablet
+$screen-sm: 768px;
+$screen-tablet: $screen-sm;
+
+// Medium screen / tablet or small desktop
+$screen-md: 992px;
+$screen-desktop: $screen-md;
+
+// Large screen / wide desktop
+$screen-lg: 1200px;
+$screen-lg-desktop: $screen-lg;
+
+// Extra large screen / extra wide desktop
+$screen-xl: 1550px;
+$screen-xl-desktop: $screen-xl;
