--- a/public/sass/app.scss
+++ b/public/sass/app.scss
@@ -4,7 +4,9 @@
 
 //Starts with small screens and goes bigger
 @import "default";
-// @import "media-query-sm.scss";
-// @import "media-query-md.scss";
-// @import "media-query-lg.scss";
+
+//@import "media-query-xs.scss";
+@import "media-query-sm.scss";
+@import "media-query-md.scss";
+@import "media-query-lg.scss";
 // @import "media-query-xl.scss";
