Renamed SASS-files adding prefix _ to prevent compiling separately.

--- a/public/sass/_media-query-lg.scss
+++ b/public/sass/_media-query-lg.scss
@@ -1,6 +1,4 @@
-/*@media (min-width: $screen-lg) { */  
-
-@media (min-width: 1200px) {
+@media (min-width: $screen-lg) { 
 	div#container {
 	    div#logo {
 	    	height: 160px;
@@ -9,12 +7,8 @@
 			font-size: 105px;
 			padding-top: 30px;
 			letter-spacing: 12px;
-			color: $defaultTextColor;
 		}
 	}
-
 }
-
-
 
 
