--- a/public/sass/app.scss
+++ b/public/sass/app.scss
@@ -5,7 +5,7 @@
 //Starts with small screens and goes bigger
 @import "default";
 
-//@import "media-query-xs.scss";
+@import "media-query-xs.scss";
 @import "media-query-sm.scss";
 @import "media-query-md.scss";
 @import "media-query-lg.scss";
