Added file for modules, tweaked SASS and fixed mini-bugg.

--- a/public/sass/_default.scss
+++ b/public/sass/_default.scss
@@ -25,7 +25,8 @@ div#container {
     height: 100%;
     div#logo {
 /*    	background-color: #c0c0c0; */
-    	height: 127px;
+    	height: 112px;
+/*        height: 127px; */
 /*    	height: 160px; */
 /*    	border-bottom: 8px solid $defaultTextColor; */
     }
@@ -40,7 +41,7 @@ div#container {
 	}
     div#innerContainer {
         border-top: 1px solid $defaultTextColor; 
-        margin: auto 100px;
+        margin: auto 20px;
     }
     div#footer {
     	min-height: 100px;
