--- a/public/sass/_media-query-lg.scss
+++ b/public/sass/_media-query-lg.scss
@@ -4,7 +4,7 @@
 	    	height: 160px;
 	    }
 		.title {
-			font-size: 105px;
+			font-size: $largeTitleSize;
 			padding-top: 30px;
 			letter-spacing: 12px;
 		}
