--- a/public/sass/_media-query-xs.scss
+++ b/public/sass/_media-query-xs.scss
@@ -1,10 +1,14 @@
 @media (min-width: $screen-xs) { 
 	div#container {
+    div#innerContainer {
+        border-top: 1px solid $defaultTextColor; 
+        margin: auto 20px;
+    }
 	    div#logo {
 	    	height: 127px;
 	    }
 		.title {
-			font-size: 72px;
+			font-size: $xsmallTitleSize;
 			padding-top: 30px;
 			letter-spacing: 6px;
 		}
