--- a/public/sass/_variables.scss
+++ b/public/sass/_variables.scss
@@ -25,6 +25,13 @@ $defaultFont: "futura-pt", "Helvetica Neue", "Helvetica", "Garamond", "Segoe UI"
 
 $defaultHeaderFont: "futura-pt", "Helvetica Neue", "Helvetica", "Garamond", "Segoe UI", sans-serif;;
 
+$xlargeTitleSize: 105px;
+$largeTitleSize: 105px;
+$mediumTitleSize: 105px;
+$smallTitleSize: 72px;
+$xsmallTitleSize: 72px;
+
+
 // --------------------------------------------------
 // Media queries breakpoints
 // --------------------------------------------------
