--- a/public/sass/_media-query-sm.scss
+++ b/public/sass/_media-query-sm.scss
@@ -1,10 +1,14 @@
 @media (min-width: 768px) { 
 	div#container {
+    div#innerContainer {
+        border-top: 1px solid $defaultTextColor; 
+        margin: auto 60px;
+    }
 	    div#logo {
 	    	height: 127px;
 	    }
 		.title {
-			font-size: 72px;
+			font-size: $smallTitleSize;
 			padding-top: 30px;
 			letter-spacing: 6px;
 		}
