Styling for delete skill.

--- a/public/sass/_default.scss
+++ b/public/sass/_default.scss
@@ -86,6 +86,43 @@ span.skill.deletehover {
 }
 
 
+button, input, select, textarea {
+  font-family : inherit;
+  font-size   : 100%;
+  padding: 8px 12px;
+}
+
+/* Basic input styling */ 
+
+input {
+    margin-bottom: 4px;
+    outline: none;
+    border: 1px solid #999;
+
+}
+
+input:focus {
+    border-bottom: solid #45bc56 5px;
+    margin-bottom: 0px;
+}
+
+button {
+    -moz-border-radius:28px;
+    -webkit-border-radius:28px;
+    border-radius:28px;
+    border: 0px solid white;    
+    &:hover {
+        background-color: #45bc56;
+        color: white;
+    }
+    &:active { 
+        background-color: white;
+        color: black;
+    }
+}
+
+
+
 
 
 
